src/app/compare/CompareStat.m.scss
@use '../variables.scss' as *;

.range {
  font-size: 0.9em;
}

.stat {
  composes: flexRow from '../dim-ui/common.m.scss';
  align-items: center;
  justify-content: flex-end;
  height: 16px;
  position: relative;
  font-variant-numeric: tabular-nums;
  gap: 5px;
  // the goal width is 64px at normal item tile size (50px)
  // but allow the stat bars to shrink to account for bigger tiles,
  // so that this doesn't blow out the overall compare width
  max-width: calc(50px + 64px + 4px - var(--item-size));
}

.statValue {
  composes: flexRow from '../dim-ui/common.m.scss';
  align-items: center;
  justify-content: flex-end;
  gap: 3px;
  min-width: 2ch; // Try to right-align 2-digit numbers

  &.noMinWidth {
    min-width: unset;
  }
}

.bar {
  position: absolute;
  top: 10%;
  height: 80%;
  left: calc(3ch - 4px);
  right: 0;
  > span {
    display: block;
    background-color: rgba(255, 255, 255, 0.25);
    height: 100%;
  }
}

.masterwork::after {
  content: '';
  display: block;
  border-radius: 50%;
  background-color: $stat-masterworked;
  height: 4px;
  width: 4px;
}

